// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`API contract — per-schema snapshots schema: AssetCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "name": {
      "type": "string",
      "minLength": 1
    },
    "type": {
      "type": "string",
      "minLength": 1
    },
    "status": {
      "type": "string",
      "enum": [
        "ACTIVE",
        "IN_MAINTENANCE",
        "RETIRED"
      ]
    },
    "criticality": {
      "type": [
        "string",
        "null"
      ],
      "enum": [
        "LOW",
        "MEDIUM",
        "HIGH",
        null
      ]
    },
    "owner": {
      "type": "string"
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "externalRef": {
      "type": [
        "string",
        "null"
      ]
    },
    "location": {
      "type": "string"
    },
    "locationId": {
      "type": [
        "string",
        "null"
      ],
      "minLength": 1
    },
    "usefulLifeYears": {
      "type": [
        "integer",
        "null"
      ],
      "minimum": 1,
      "maximum": 100
    },
    "manufacturer": {
      "type": [
        "string",
        "null"
      ]
    },
    "model": {
      "type": [
        "string",
        "null"
      ]
    },
    "serialNumber": {
      "type": [
        "string",
        "null"
      ]
    },
    "year": {
      "type": [
        "integer",
        "null"
      ],
      "minimum": 1900,
      "maximum": 2100
    },
    "purchaseDate": {
      "type": [
        "string",
        "null"
      ]
    },
    "purchaseCost": {
      "type": [
        "number",
        "null"
      ],
      "minimum": 0
    }
  },
  "required": [
    "name",
    "type"
  ],
  "description": "Payload for creating a tenant agricultural asset (machine, building, equipment). Manufacturer / model / serial / location are free-text; criticality is LOW/MEDIUM/HIGH."
}"
`;

exports[`API contract — per-schema snapshots schema: AssetDetail 1`] = `
"{
  "allOf": [
    {
      "$ref": "#/components/schemas/AssetListItem"
    },
    {
      "type": "object",
      "properties": {
        "practices": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string"
              },
              "practice": {
                "type": "object",
                "properties": {
                  "id": {
                    "type": "string"
                  },
                  "name": {
                    "type": "string"
                  },
                  "status": {
                    "type": "string"
                  }
                },
                "required": [
                  "id",
                  "name",
                  "status"
                ],
                "additionalProperties": {}
              }
            },
            "required": [
              "id",
              "practice"
            ],
            "additionalProperties": {}
          }
        },
        "risks": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string"
              },
              "risk": {
                "type": "object",
                "properties": {
                  "id": {
                    "type": "string"
                  },
                  "title": {
                    "type": "string"
                  },
                  "status": {
                    "type": "string"
                  }
                },
                "required": [
                  "id",
                  "title",
                  "status"
                ],
                "additionalProperties": {}
              }
            },
            "required": [
              "id",
              "risk"
            ],
            "additionalProperties": {}
          }
        }
      },
      "additionalProperties": {}
    }
  ],
  "description": "Asset with linked practices and risks. Returned by GET /assets/{id}."
}"
`;

exports[`API contract — per-schema snapshots schema: AssetEvidenceLinkRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "url": {
      "type": "string",
      "maxLength": 2000,
      "format": "uri"
    },
    "note": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 2000
    }
  },
  "required": [
    "url"
  ],
  "description": "Attach a URL as evidence on an asset. File uploads use the multipart /evidence/uploads endpoint with an assetId."
}"
`;

exports[`API contract — per-schema snapshots schema: AssetListItem 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "name": {
      "type": "string"
    },
    "type": {
      "type": "string"
    },
    "owner": {
      "type": [
        "string",
        "null"
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "location": {
      "type": [
        "string",
        "null"
      ]
    },
    "manufacturer": {
      "type": [
        "string",
        "null"
      ]
    },
    "model": {
      "type": [
        "string",
        "null"
      ]
    },
    "serialNumber": {
      "type": [
        "string",
        "null"
      ]
    },
    "year": {
      "type": [
        "integer",
        "null"
      ]
    },
    "purchaseDate": {
      "type": [
        "string",
        "null"
      ]
    },
    "purchaseCost": {
      "type": [
        "number",
        "null"
      ]
    },
    "criticality": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "externalRef": {
      "type": [
        "string",
        "null"
      ]
    },
    "tags": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "ownerUser": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    },
    "_count": {
      "type": "object",
      "properties": {
        "practices": {
          "type": "number"
        },
        "risks": {
          "type": "number"
        }
      }
    }
  },
  "required": [
    "id",
    "tenantId",
    "name",
    "type"
  ],
  "additionalProperties": {},
  "description": "Agricultural asset (machine, building, equipment) as it appears in list views. Criticality is an explicit LOW/MEDIUM/HIGH field."
}"
`;

exports[`API contract — per-schema snapshots schema: AssetUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "name": {
      "type": "string",
      "minLength": 1
    },
    "type": {
      "type": "string",
      "minLength": 1
    },
    "status": {
      "type": "string",
      "enum": [
        "ACTIVE",
        "IN_MAINTENANCE",
        "RETIRED"
      ]
    },
    "criticality": {
      "type": [
        "string",
        "null"
      ],
      "enum": [
        "LOW",
        "MEDIUM",
        "HIGH",
        null
      ]
    },
    "owner": {
      "type": "string"
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "externalRef": {
      "type": [
        "string",
        "null"
      ]
    },
    "location": {
      "type": "string"
    },
    "locationId": {
      "type": [
        "string",
        "null"
      ],
      "minLength": 1
    },
    "usefulLifeYears": {
      "type": [
        "integer",
        "null"
      ],
      "minimum": 1,
      "maximum": 100
    },
    "manufacturer": {
      "type": [
        "string",
        "null"
      ]
    },
    "model": {
      "type": [
        "string",
        "null"
      ]
    },
    "serialNumber": {
      "type": [
        "string",
        "null"
      ]
    },
    "year": {
      "type": [
        "integer",
        "null"
      ],
      "minimum": 1900,
      "maximum": 2100
    },
    "purchaseDate": {
      "type": [
        "string",
        "null"
      ]
    },
    "purchaseCost": {
      "type": [
        "number",
        "null"
      ],
      "minimum": 0
    }
  },
  "description": "Partial update for an agricultural asset. Every field is optional; only provided fields are persisted."
}"
`;

exports[`API contract — per-schema snapshots schema: AuditLogEntry 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "action": {
      "type": "string",
      "example": "CONTROL_CREATED"
    },
    "entity": {
      "type": "string",
      "example": "Practice"
    },
    "entityId": {
      "type": "string"
    },
    "details": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string",
      "example": "2026-04-28T07:42:11.000Z"
    },
    "user": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRefShort"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    }
  },
  "required": [
    "id",
    "action",
    "details",
    "createdAt"
  ],
  "additionalProperties": {},
  "description": "A single audit-log row. Hash-chained at the DB layer; this DTO is the read view exposed via the audit/activity endpoints."
}"
`;

exports[`API contract — per-schema snapshots schema: AuthRegisterRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "email": {
      "type": "string",
      "format": "email"
    },
    "password": {
      "type": "string",
      "minLength": 8
    },
    "name": {
      "type": "string",
      "minLength": 1
    },
    "orgName": {
      "type": "string",
      "minLength": 1
    }
  },
  "required": [
    "email",
    "password",
    "name",
    "orgName"
  ],
  "description": "Self-service signup payload (gated by AUTH_TEST_MODE in non-prod). The password is checked against HIBP via k-anonymity before persistence; emailVerification is initiated server-side."
}"
`;

exports[`API contract — per-schema snapshots schema: Contract 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "seasonId": {
      "type": [
        "string",
        "null"
      ]
    },
    "key": {
      "type": [
        "string",
        "null"
      ]
    },
    "counterparty": {
      "type": "string"
    },
    "commodity": {
      "type": [
        "string",
        "null"
      ]
    },
    "type": {
      "type": "string",
      "enum": [
        "SALE",
        "PURCHASE"
      ]
    },
    "status": {
      "type": "string"
    },
    "volumeTonnes": {
      "type": [
        "string",
        "null"
      ]
    },
    "pricePerTonne": {
      "type": [
        "string",
        "null"
      ]
    },
    "priceCurrency": {
      "type": [
        "string",
        "null"
      ]
    },
    "deliveryStart": {
      "type": [
        "string",
        "null"
      ]
    },
    "deliveryEnd": {
      "type": [
        "string",
        "null"
      ]
    },
    "terms": {
      "type": [
        "string",
        "null"
      ]
    },
    "pricingNotes": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "season": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "status": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    }
  },
  "required": [
    "id",
    "tenantId",
    "counterparty",
    "type",
    "status"
  ],
  "additionalProperties": {},
  "description": "Grain marketing/supply contract — a forward SALE of produce or PURCHASE of inputs against a counterparty. volumeTonnes/pricePerTonne are decimal strings; terms/pricingNotes are encrypted at rest and returned decrypted."
}"
`;

exports[`API contract — per-schema snapshots schema: EmptyBody 1`] = `
"{
  "type": "object",
  "properties": {},
  "description": "Empty request body. Used by mutation endpoints whose semantics live entirely in the URL (e.g. POST /restore on a soft-deleted resource)."
}"
`;

exports[`API contract — per-schema snapshots schema: ErrorResponse 1`] = `
"{
  "type": "object",
  "properties": {
    "error": {
      "type": "object",
      "properties": {
        "code": {
          "type": "string",
          "example": "NOT_FOUND"
        },
        "message": {
          "type": "string",
          "example": "Practice not found"
        },
        "requestId": {
          "type": "string",
          "example": "req_01HG7…"
        },
        "details": {}
      },
      "required": [
        "code",
        "message"
      ]
    }
  },
  "required": [
    "error"
  ],
  "description": "Canonical error envelope returned by every error path. \`code\` is a stable string clients can branch on; \`message\` is human-readable; \`requestId\` correlates with server logs; \`details\` is optional structured context (validation issues, rate-limit info, etc.)."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "type": {
      "type": "string",
      "enum": [
        "TEXT",
        "FILE",
        "LINK",
        "SCREENSHOT"
      ],
      "default": "TEXT"
    },
    "title": {
      "type": "string",
      "minLength": 1
    },
    "content": {
      "type": "string"
    },
    "fileName": {
      "type": [
        "string",
        "null"
      ]
    },
    "fileSize": {
      "type": [
        "number",
        "null"
      ]
    },
    "category": {
      "type": [
        "string",
        "null"
      ]
    },
    "folder": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 120
    },
    "owner": {
      "type": [
        "string",
        "null"
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewCycle": {
      "type": [
        "string",
        "null"
      ]
    },
    "nextReviewDate": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "title"
  ],
  "description": "Create an evidence record. type=FILE expects a paired multipart upload via /evidence/uploads; type=TEXT/LINK can use this JSON body directly. content is encrypted at rest for TEXT type."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceDetail 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "practiceId": {
      "type": [
        "string",
        "null"
      ]
    },
    "type": {
      "type": "string"
    },
    "title": {
      "type": "string"
    },
    "content": {
      "type": [
        "string",
        "null"
      ]
    },
    "fileName": {
      "type": [
        "string",
        "null"
      ]
    },
    "fileSize": {
      "type": [
        "number",
        "null"
      ]
    },
    "category": {
      "type": [
        "string",
        "null"
      ]
    },
    "dateCollected": {
      "type": "string"
    },
    "owner": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewCycle": {
      "type": [
        "string",
        "null"
      ]
    },
    "nextReviewDate": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "practice": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "code": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    },
    "reviews": {
      "type": "array",
      "items": {
        "$ref": "#/components/schemas/EvidenceReview"
      }
    }
  },
  "required": [
    "id",
    "tenantId",
    "type",
    "title",
    "status"
  ],
  "additionalProperties": {},
  "description": "Evidence record with the full review history attached. Returned by GET /evidence/{id}."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceListItem 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "practiceId": {
      "type": [
        "string",
        "null"
      ]
    },
    "type": {
      "type": "string"
    },
    "title": {
      "type": "string"
    },
    "content": {
      "type": [
        "string",
        "null"
      ]
    },
    "fileName": {
      "type": [
        "string",
        "null"
      ]
    },
    "fileSize": {
      "type": [
        "number",
        "null"
      ]
    },
    "category": {
      "type": [
        "string",
        "null"
      ]
    },
    "dateCollected": {
      "type": "string"
    },
    "owner": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewCycle": {
      "type": [
        "string",
        "null"
      ]
    },
    "nextReviewDate": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "practice": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "code": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    }
  },
  "required": [
    "id",
    "tenantId",
    "type",
    "title",
    "status"
  ],
  "additionalProperties": {},
  "description": "Evidence record as shown in list views. content is encrypted at rest for TEXT type and decrypted transparently on read by the field-encryption middleware."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceReview 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "evidenceId": {
      "type": "string"
    },
    "reviewerId": {
      "type": "string"
    },
    "action": {
      "type": "string"
    },
    "comment": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string"
    },
    "reviewer": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRefShort"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    }
  },
  "required": [
    "id",
    "evidenceId",
    "reviewerId",
    "action",
    "createdAt"
  ],
  "additionalProperties": {},
  "description": "A single evidence-review event (submission/approval/rejection) — append-only audit row attached to the evidence record."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceReviewRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "action": {
      "type": "string",
      "enum": [
        "SUBMITTED",
        "APPROVED",
        "REJECTED"
      ]
    },
    "comment": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "action"
  ],
  "description": "Lifecycle transition for an evidence record. SUBMITTED is the request-for-review state; APPROVED/REJECTED are reviewer decisions."
}"
`;

exports[`API contract — per-schema snapshots schema: EvidenceUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "title": {
      "type": "string",
      "minLength": 1
    },
    "content": {
      "type": "string"
    },
    "practiceId": {
      "type": [
        "string",
        "null"
      ]
    },
    "category": {
      "type": [
        "string",
        "null"
      ]
    },
    "folder": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 120
    },
    "owner": {
      "type": [
        "string",
        "null"
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewCycle": {
      "type": [
        "string",
        "null"
      ]
    },
    "nextReviewDate": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "description": "Partial update for an evidence record (metadata only — file content is immutable post-upload)."
}"
`;

exports[`API contract — per-schema snapshots schema: FieldOperationCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "title": {
      "type": "string",
      "minLength": 1,
      "maxLength": 255
    },
    "operationType": {
      "type": "string",
      "enum": [
        "SPRAY",
        "FERTILIZE",
        "SEED",
        "OTHER"
      ]
    },
    "assigneeUserId": {
      "type": "string",
      "minLength": 1
    },
    "parcelIds": {
      "type": "array",
      "items": {
        "type": "string",
        "minLength": 1
      },
      "minItems": 1
    },
    "productItemId": {
      "type": "string",
      "minLength": 1
    },
    "doseValue": {
      "type": "number",
      "exclusiveMinimum": 0
    },
    "doseUnitId": {
      "type": "string",
      "minLength": 1
    },
    "fertilizerItemId": {
      "type": "string",
      "minLength": 1
    },
    "fertilizerDoseValue": {
      "type": "number",
      "exclusiveMinimum": 0
    },
    "fertilizerDoseUnitId": {
      "type": "string",
      "minLength": 1
    },
    "waterRateValue": {
      "type": [
        "number",
        "null"
      ],
      "exclusiveMinimum": 0
    },
    "waterRateUnitId": {
      "type": [
        "string",
        "null"
      ],
      "minLength": 1
    },
    "targetNote": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 2000
    },
    "dueAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "applicationTechnique": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 255
    }
  },
  "required": [
    "assigneeUserId",
    "parcelIds"
  ],
  "description": "Create a spray/field-operation job over selected parcels of a location, assigned to an operator. Applies exactly one input — a product OR a fertilizer — writing one FIELD_OPERATION Task plus one OperationParcel line per parcel."
}"
`;

exports[`API contract — per-schema snapshots schema: GrainBin 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "name": {
      "type": "string"
    },
    "key": {
      "type": [
        "string",
        "null"
      ]
    },
    "kind": {
      "type": "string",
      "enum": [
        "BIN",
        "STORAGE"
      ]
    },
    "status": {
      "type": "string",
      "enum": [
        "ACTIVE",
        "ARCHIVED"
      ]
    },
    "description": {
      "type": [
        "string",
        "null"
      ]
    },
    "capacityTonnes": {
      "type": [
        "number",
        "null"
      ]
    },
    "storedTonnes": {
      "type": "number"
    },
    "lotCount": {
      "type": "number"
    },
    "fillPct": {
      "type": [
        "number",
        "null"
      ]
    },
    "mixedUnits": {
      "type": "boolean"
    },
    "unconvertible": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "unitKey": {
            "type": "string"
          },
          "symbol": {
            "type": "string"
          },
          "quantity": {
            "type": "number"
          },
          "lotCount": {
            "type": "number"
          }
        },
        "required": [
          "unitKey",
          "symbol",
          "quantity",
          "lotCount"
        ]
      },
      "default": []
    }
  },
  "required": [
    "id",
    "name",
    "key",
    "kind",
    "status",
    "description",
    "capacityTonnes",
    "storedTonnes",
    "lotCount",
    "fillPct",
    "mixedUnits"
  ],
  "additionalProperties": {},
  "description": "A grain bin — a BIN/STORAGE Location with a computed fill. storedTonnes is the bin's HARVESTED_PRODUCE stock converted into tonnes via each lot's unit, so it is comparable to capacityTonnes; fillPct is the fraction of capacity used. Stock in a unit with no tonnage (COUNT/VOLUME) is reported in \`unconvertible\` and sets \`mixedUnits\`, which suppresses fillPct rather than being counted at face value."
}"
`;

exports[`API contract — per-schema snapshots schema: GrainCostRow 1`] = `
"{
  "type": "object",
  "properties": {
    "plantingId": {
      "type": "string"
    },
    "plantingName": {
      "type": "string"
    },
    "cropVariety": {
      "type": [
        "string",
        "null"
      ]
    },
    "seasonId": {
      "type": [
        "string",
        "null"
      ]
    },
    "locationId": {
      "type": [
        "string",
        "null"
      ]
    },
    "logEntryCost": {
      "type": "number"
    },
    "stockCost": {
      "type": "number"
    },
    "totalCost": {
      "type": "number"
    },
    "currencies": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "currencyMixed": {
      "type": "boolean"
    }
  },
  "required": [
    "plantingId",
    "plantingName",
    "cropVariety",
    "seasonId",
    "locationId",
    "logEntryCost",
    "stockCost",
    "totalCost",
    "currencies",
    "currencyMixed"
  ],
  "additionalProperties": {},
  "description": "One row of the grain cost rollup grouped by planting. totalCost = logEntryCost + stockCost. Cost attributed to a planting: journal entries linked to it plus the stock CONSUMED against those entries. An entry covering several plantings is split evenly between them."
}"
`;

exports[`API contract — per-schema snapshots schema: GrainFieldCostRow 1`] = `
"{
  "type": "object",
  "properties": {
    "locationId": {
      "type": [
        "string",
        "null"
      ]
    },
    "locationName": {
      "type": [
        "string",
        "null"
      ]
    },
    "plantingCount": {
      "type": "number"
    },
    "logEntryCost": {
      "type": "number"
    },
    "stockCost": {
      "type": "number"
    },
    "totalCost": {
      "type": "number"
    },
    "currencies": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "currencyMixed": {
      "type": "boolean"
    },
    "costPerHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "costPerTonne": {
      "type": [
        "number",
        "null"
      ]
    },
    "harvestedAreaHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "producedTonnes": {
      "type": [
        "number",
        "null"
      ]
    }
  },
  "required": [
    "locationId",
    "locationName",
    "plantingCount",
    "logEntryCost",
    "stockCost",
    "totalCost",
    "currencies",
    "currencyMixed",
    "costPerHa",
    "costPerTonne",
    "harvestedAreaHa",
    "producedTonnes"
  ],
  "additionalProperties": {},
  "description": "Grain cost rolled up to a field, with cost per harvested hectare and per tonne. Same null rules as the season row."
}"
`;

exports[`API contract — per-schema snapshots schema: GrainSeasonCostRow 1`] = `
"{
  "type": "object",
  "properties": {
    "seasonId": {
      "type": [
        "string",
        "null"
      ]
    },
    "seasonName": {
      "type": [
        "string",
        "null"
      ]
    },
    "plantingCount": {
      "type": "number"
    },
    "logEntryCost": {
      "type": "number"
    },
    "stockCost": {
      "type": "number"
    },
    "totalCost": {
      "type": "number"
    },
    "currencies": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "currencyMixed": {
      "type": "boolean"
    },
    "costPerHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "costPerTonne": {
      "type": [
        "number",
        "null"
      ]
    },
    "harvestedAreaHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "producedTonnes": {
      "type": [
        "number",
        "null"
      ]
    }
  },
  "required": [
    "seasonId",
    "seasonName",
    "plantingCount",
    "logEntryCost",
    "stockCost",
    "totalCost",
    "currencies",
    "currencyMixed",
    "costPerHa",
    "costPerTonne",
    "harvestedAreaHa",
    "producedTonnes"
  ],
  "additionalProperties": {},
  "description": "Grain cost rolled up to a season, with cost per harvested hectare and per tonne. Per-unit figures are null when the yield register has no area/tonnage for the season, or when the costs span multiple currencies."
}"
`;

exports[`API contract — per-schema snapshots schema: InventoryLot 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "lotCode": {
      "type": "string"
    },
    "item": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "category": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name",
        "category"
      ],
      "additionalProperties": {}
    },
    "unit": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "symbol": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "symbol"
      ],
      "additionalProperties": {}
    },
    "location": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    },
    "quantityOnHand": {
      "type": "number"
    },
    "expiresAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "receivedAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "lowStock": {
      "type": "boolean"
    }
  },
  "required": [
    "id",
    "lotCode",
    "item",
    "unit",
    "quantityOnHand",
    "lowStock"
  ],
  "additionalProperties": {},
  "description": "An inventory lot of a catalog input (seed / pesticide / fertilizer / …). quantityOnHand is the ledger-derived on-hand quantity in the lot unit; lowStock flags reorder. Cursor-paginate with ?limit=&cursor= for large fields."
}"
`;

exports[`API contract — per-schema snapshots schema: InventoryLotPage 1`] = `
"{
  "type": "object",
  "properties": {
    "items": {
      "type": "array",
      "items": {
        "$ref": "#/components/schemas/InventoryLot"
      }
    },
    "pageInfo": {
      "type": "object",
      "properties": {
        "nextCursor": {
          "type": "string"
        },
        "hasNextPage": {
          "type": "boolean"
        }
      },
      "required": [
        "hasNextPage"
      ]
    }
  },
  "required": [
    "items",
    "pageInfo"
  ],
  "description": "A cursor page of inventory lots — returned by GET /inventory/lots?limit=&cursor=."
}"
`;

exports[`API contract — per-schema snapshots schema: LocationCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "name": {
      "type": "string",
      "minLength": 1,
      "maxLength": 255
    },
    "description": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 10000
    },
    "status": {
      "type": "string",
      "enum": [
        "ACTIVE",
        "ARCHIVED"
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "name"
  ],
  "description": "Create a Location (a farm/field block). Parcels are populated by importing a spatial file (shapefile/KML/GeoJSON)."
}"
`;

exports[`API contract — per-schema snapshots schema: LocationDetail 1`] = `
"{
  "allOf": [
    {
      "$ref": "#/components/schemas/LocationListItem"
    },
    {
      "type": "object",
      "properties": {
        "parcels": {
          "type": "array",
          "items": {
            "$ref": "#/components/schemas/Parcel"
          }
        }
      },
      "additionalProperties": {}
    }
  ],
  "description": "Location with its parcels. Returned by GET /locations/{id}."
}"
`;

exports[`API contract — per-schema snapshots schema: LocationListItem 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "key": {
      "type": [
        "string",
        "null"
      ]
    },
    "name": {
      "type": "string"
    },
    "description": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "spatialFileId": {
      "type": [
        "string",
        "null"
      ]
    },
    "spatialFormat": {
      "type": [
        "string",
        "null"
      ]
    },
    "boundsJson": {},
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "owner": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    },
    "_count": {
      "type": "object",
      "properties": {
        "parcels": {
          "type": "number"
        }
      }
    }
  },
  "required": [
    "id",
    "tenantId",
    "name",
    "status"
  ],
  "additionalProperties": {},
  "description": "Location as it appears in list views. A Location holds a set of imported Parcels (PostGIS polygons)."
}"
`;

exports[`API contract — per-schema snapshots schema: LocationUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "name": {
      "type": "string",
      "minLength": 1,
      "maxLength": 255
    },
    "description": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 10000
    },
    "status": {
      "type": "string",
      "enum": [
        "ACTIVE",
        "ARCHIVED"
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "description": "Partial update for a Location. Only provided fields are persisted."
}"
`;

exports[`API contract — per-schema snapshots schema: LogEntryCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "type": {
      "type": "string",
      "enum": [
        "ACTIVITY",
        "OBSERVATION",
        "INPUT_APPLICATION",
        "SEEDING",
        "TRANSPLANTING",
        "HARVEST",
        "IRRIGATION",
        "MAINTENANCE",
        "LAB_TEST",
        "GRAZING"
      ]
    },
    "status": {
      "type": "string",
      "enum": [
        "PLANNED",
        "DONE"
      ]
    },
    "occurredAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "title": {
      "type": "string",
      "minLength": 1,
      "maxLength": 500
    },
    "notes": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 20000
    },
    "quantities": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "measure": {
            "type": "string",
            "enum": [
              "COUNT",
              "WEIGHT",
              "VOLUME",
              "AREA",
              "LENGTH",
              "RATE",
              "OTHER"
            ]
          },
          "value": {
            "type": [
              "number",
              "null"
            ]
          },
          "unitId": {
            "type": "string",
            "minLength": 1
          },
          "label": {
            "type": [
              "string",
              "null"
            ],
            "maxLength": 255
          }
        },
        "required": [
          "measure",
          "value",
          "unitId"
        ]
      },
      "maxItems": 50
    },
    "locationIds": {
      "type": "array",
      "items": {
        "type": "string",
        "minLength": 1
      },
      "maxItems": 100
    },
    "equipmentIds": {
      "type": "array",
      "items": {
        "type": "string",
        "minLength": 1
      },
      "maxItems": 100
    },
    "operationParcelId": {
      "type": [
        "string",
        "null"
      ]
    },
    "costAmount": {
      "type": [
        "number",
        "null"
      ],
      "minimum": 0
    },
    "costCurrency": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 8
    },
    "harvest": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "itemId": {
          "type": "string",
          "minLength": 1
        },
        "quantity": {
          "type": "number",
          "exclusiveMinimum": 0
        },
        "lotCode": {
          "type": [
            "string",
            "null"
          ],
          "maxLength": 120
        },
        "locationId": {
          "type": [
            "string",
            "null"
          ]
        },
        "expiresAt": {
          "type": [
            "string",
            "null"
          ]
        },
        "parcelId": {
          "type": [
            "string",
            "null"
          ]
        },
        "sourceLotIds": {
          "type": "array",
          "items": {
            "type": "string",
            "minLength": 1
          },
          "maxItems": 100
        },
        "costAmount": {
          "type": [
            "number",
            "null"
          ],
          "minimum": 0
        },
        "costCurrency": {
          "type": [
            "string",
            "null"
          ],
          "maxLength": 8
        },
        "recordYield": {
          "type": [
            "boolean",
            "null"
          ]
        }
      },
      "required": [
        "itemId",
        "quantity"
      ]
    },
    "plantingLinks": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "plantingId": {
            "type": "string",
            "minLength": 1
          },
          "stage": {
            "type": "string",
            "enum": [
              "SOW",
              "TRANSPLANT",
              "HARVEST"
            ]
          }
        },
        "required": [
          "plantingId",
          "stage"
        ]
      },
      "maxItems": 100
    }
  },
  "required": [
    "type",
    "title"
  ],
  "description": "Create a field-journal entry (LogEntry). title is sanitized as plain text; notes is sanitized as rich-text HTML (TipTap). quantities carry the farmOS measure+value+unit lines (an INPUT_APPLICATION entry records the applied amount); locationIds / equipmentIds link the entry to field blocks and equipment. occurredAt defaults to now. plantingLinks record plan-vs-actual: each links the entry to a Planting + lifecycle stage (SOW/TRANSPLANT/HARVEST), writing a LogPlanting row (the entry becomes the ACTUAL for that milestone) and advancing the Planting status. On a HARVEST entry, an optional harvest payload mints a HARVEST_IN inventory lot of the harvested item and records lot genealogy (the input lots consumed on parcelId become DERIVATION parents)."
}"
`;

exports[`API contract — per-schema snapshots schema: LogEntryFileAttachRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "fileRecordId": {
      "type": "string",
      "minLength": 1
    },
    "caption": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 500
    }
  },
  "required": [
    "fileRecordId"
  ],
  "description": "Attach an already-uploaded FileRecord (photo / document) to a journal entry. Upload the file first via /journal/{id}/files (multipart) or /evidence/uploads, then reference its id here."
}"
`;

exports[`API contract — per-schema snapshots schema: LogEntryUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "type": {
      "type": "string",
      "enum": [
        "ACTIVITY",
        "OBSERVATION",
        "INPUT_APPLICATION",
        "SEEDING",
        "TRANSPLANTING",
        "HARVEST",
        "IRRIGATION",
        "MAINTENANCE",
        "LAB_TEST",
        "GRAZING"
      ]
    },
    "status": {
      "type": "string",
      "enum": [
        "PLANNED",
        "DONE"
      ]
    },
    "occurredAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "title": {
      "type": "string",
      "minLength": 1,
      "maxLength": 500
    },
    "notes": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 20000
    },
    "quantities": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "measure": {
            "type": "string",
            "enum": [
              "COUNT",
              "WEIGHT",
              "VOLUME",
              "AREA",
              "LENGTH",
              "RATE",
              "OTHER"
            ]
          },
          "value": {
            "type": [
              "number",
              "null"
            ]
          },
          "unitId": {
            "type": "string",
            "minLength": 1
          },
          "label": {
            "type": [
              "string",
              "null"
            ],
            "maxLength": 255
          }
        },
        "required": [
          "measure",
          "value",
          "unitId"
        ]
      },
      "maxItems": 50
    },
    "locationIds": {
      "type": "array",
      "items": {
        "type": "string",
        "minLength": 1
      },
      "maxItems": 100
    },
    "equipmentIds": {
      "type": "array",
      "items": {
        "type": "string",
        "minLength": 1
      },
      "maxItems": 100
    },
    "operationParcelId": {
      "type": [
        "string",
        "null"
      ]
    },
    "costAmount": {
      "type": [
        "number",
        "null"
      ],
      "minimum": 0
    },
    "costCurrency": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 8
    }
  },
  "description": "Partial update for a field-journal entry. Every field optional. When quantities / locationIds / equipmentIds are supplied they fully REPLACE the existing set (full-replace semantics, matching the create shape)."
}"
`;

exports[`API contract — per-schema snapshots schema: OperationParcel 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "taskId": {
      "type": "string"
    },
    "parcelId": {
      "type": "string"
    },
    "productItemId": {
      "type": "string"
    },
    "doseValue": {
      "type": "string"
    },
    "doseUnitId": {
      "type": "string"
    },
    "targetNote": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "completedAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "completedByUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "product": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    },
    "doseUnit": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "symbol": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "symbol"
      ],
      "additionalProperties": {}
    },
    "parcel": {
      "type": "object",
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "areaHa": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    },
    "completedBy": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    }
  },
  "required": [
    "id",
    "tenantId",
    "taskId",
    "parcelId",
    "productItemId",
    "doseValue",
    "doseUnitId",
    "status",
    "product",
    "doseUnit",
    "parcel"
  ],
  "additionalProperties": {},
  "description": "A spray-prescription line of a field-operation job: one parcel, one product, one dose. Marking it DONE deducts dose×area from the FEFO inventory lot and writes an INPUT_APPLICATION journal record."
}"
`;

exports[`API contract — per-schema snapshots schema: OperationParcelUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "status": {
      "type": "string",
      "enum": [
        "PENDING",
        "DONE",
        "SKIPPED"
      ]
    },
    "note": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 2000
    }
  },
  "required": [
    "status"
  ],
  "description": "Operator updates one per-parcel prescription line. The job auto-resolves when every line is DONE or SKIPPED."
}"
`;

exports[`API contract — per-schema snapshots schema: Parcel 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "name": {
      "type": "string"
    },
    "cropType": {
      "type": [
        "string",
        "null"
      ]
    },
    "areaHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "geometry": {},
    "properties": {}
  },
  "required": [
    "id",
    "name"
  ],
  "additionalProperties": {},
  "description": "One imported parcel polygon. geometry is GeoJSON MultiPolygon in WGS84; areaHa is the on-ellipsoid area in hectares."
}"
`;

exports[`API contract — per-schema snapshots schema: PortfolioGrainSummary 1`] = `
"{
  "type": "object",
  "properties": {
    "organizationId": {
      "type": "string"
    },
    "organizationSlug": {
      "type": "string"
    },
    "generatedAt": {
      "type": "string"
    },
    "totals": {
      "type": "object",
      "properties": {
        "contractedSaleTonnes": {
          "type": "number"
        },
        "contractedPurchaseTonnes": {
          "type": "number"
        },
        "totalYieldTonnes": {
          "type": "number"
        },
        "totalActivityCost": {
          "type": "number"
        },
        "currency": {
          "type": [
            "string",
            "null"
          ]
        },
        "binCount": {
          "type": "number"
        },
        "binCapacityTonnes": {
          "type": "number"
        },
        "binStoredTonnes": {
          "type": "number"
        },
        "binUtilisationPct": {
          "type": [
            "number",
            "null"
          ]
        },
        "tenantsWithGrain": {
          "type": "number"
        },
        "tenantsTotal": {
          "type": "number"
        }
      },
      "required": [
        "contractedSaleTonnes",
        "contractedPurchaseTonnes",
        "totalYieldTonnes",
        "totalActivityCost",
        "currency",
        "binCount",
        "binCapacityTonnes",
        "binStoredTonnes",
        "binUtilisationPct",
        "tenantsWithGrain",
        "tenantsTotal"
      ],
      "additionalProperties": {}
    },
    "perTenant": {
      "type": "array",
      "items": {
        "type": "object",
        "properties": {
          "tenantId": {
            "type": "string"
          },
          "tenantName": {
            "type": "string"
          },
          "contractedSaleTonnes": {
            "type": "number"
          },
          "contractedPurchaseTonnes": {
            "type": "number"
          },
          "totalYieldTonnes": {
            "type": "number"
          },
          "totalActivityCost": {
            "type": "number"
          },
          "currency": {
            "type": [
              "string",
              "null"
            ]
          },
          "binCount": {
            "type": "number"
          },
          "binCapacityTonnes": {
            "type": "number"
          },
          "binStoredTonnes": {
            "type": "number"
          }
        },
        "required": [
          "tenantId",
          "tenantName",
          "contractedSaleTonnes",
          "contractedPurchaseTonnes",
          "totalYieldTonnes",
          "totalActivityCost",
          "currency",
          "binCount",
          "binCapacityTonnes",
          "binStoredTonnes"
        ],
        "additionalProperties": {}
      }
    }
  },
  "required": [
    "organizationId",
    "organizationSlug",
    "generatedAt",
    "totals",
    "perTenant"
  ],
  "additionalProperties": {},
  "description": "Org-level grain portfolio rollup: contracted volume (sale/purchase), harvested yield, activity cost and bin storage aggregated across every child farm tenant, with org totals plus a per-tenant breakdown. Each per-tenant figure is computed inside an RLS-bound query against that tenant."
}"
`;

exports[`API contract — per-schema snapshots schema: PracticeCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "code": {
      "type": [
        "string",
        "null"
      ]
    },
    "name": {
      "type": "string",
      "minLength": 1
    },
    "description": {
      "type": [
        "string",
        "null"
      ]
    },
    "intent": {
      "type": [
        "string",
        "null"
      ]
    },
    "category": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string",
      "enum": [
        "NOT_STARTED",
        "IN_PROGRESS",
        "IMPLEMENTED",
        "NEEDS_REVIEW"
      ],
      "default": "NOT_STARTED"
    },
    "frequency": {
      "type": [
        "string",
        "null"
      ],
      "enum": [
        "AD_HOC",
        "DAILY",
        "WEEKLY",
        "MONTHLY",
        "QUARTERLY",
        "ANNUALLY",
        null
      ]
    },
    "ownerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "evidenceSource": {
      "type": [
        "string",
        "null"
      ],
      "enum": [
        "MANUAL",
        "INTEGRATION",
        null
      ]
    },
    "automationKey": {
      "type": [
        "string",
        "null"
      ]
    },
    "mitigationType": {
      "type": [
        "string",
        "null"
      ],
      "enum": [
        "PREVENTIVE",
        "DETECTIVE",
        "DETERRENT",
        "CORRECTIVE",
        "COMPENSATING",
        null
      ]
    },
    "isCustom": {
      "type": "boolean",
      "default": true
    }
  },
  "required": [
    "name"
  ],
  "description": "Payload for creating a practice. Status defaults to NOT_STARTED. \`code\` carries the framework reference where one applies (e.g. ISO 27001:2022 A.5.1) and is minted as \`CTL-N\` for custom practices. Custom practices (isCustom=true) are tenant-specific."
}"
`;

exports[`API contract — per-schema snapshots schema: SuccessResponse 1`] = `
"{
  "type": "object",
  "properties": {
    "success": {
      "type": "boolean",
      "enum": [
        true
      ]
    }
  },
  "required": [
    "success"
  ],
  "description": "Empty success envelope. Returned by mutation endpoints that have no resource to echo back (e.g. status changes, links, deletes)."
}"
`;

exports[`API contract — per-schema snapshots schema: Task 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "tenantId": {
      "type": "string"
    },
    "title": {
      "type": "string"
    },
    "type": {
      "type": "string"
    },
    "description": {
      "type": [
        "string",
        "null"
      ]
    },
    "status": {
      "type": "string"
    },
    "severity": {
      "type": [
        "string",
        "null"
      ]
    },
    "priority": {
      "type": [
        "string",
        "null"
      ]
    },
    "source": {
      "type": [
        "string",
        "null"
      ]
    },
    "dueAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "resolvedAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "resolution": {
      "type": [
        "string",
        "null"
      ]
    },
    "practiceId": {
      "type": [
        "string",
        "null"
      ]
    },
    "assigneeUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdByUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "metadataJson": {},
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "assignee": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    },
    "reviewer": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    },
    "createdBy": {
      "allOf": [
        {
          "$ref": "#/components/schemas/UserRef"
        },
        {
          "type": [
            "object",
            "null"
          ]
        }
      ]
    }
  },
  "required": [
    "id",
    "tenantId",
    "title",
    "type",
    "status"
  ],
  "additionalProperties": {},
  "description": "Unified work-item record covering audit findings, practice gaps, incidents, improvements, and ad-hoc tasks. The type field discriminates which UI surfaces this row appears in."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskAssignRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "assigneeUserId": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "assigneeUserId"
  ],
  "description": "Reassign or unassign a task. Pass null to clear the assignee."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskCommentAddRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "body": {
      "type": "string",
      "minLength": 1,
      "maxLength": 10000
    }
  },
  "required": [
    "body"
  ],
  "description": "Append a comment to a task. body is sanitized server-side (rich-text allowlist) and encrypted at rest (Epic B field-encryption manifest)."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskCreateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "title": {
      "type": "string",
      "minLength": 1,
      "maxLength": 500
    },
    "type": {
      "type": "string",
      "enum": [
        "IMPROVEMENT",
        "TASK"
      ],
      "default": "TASK"
    },
    "description": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 10000
    },
    "severity": {
      "type": "string",
      "enum": [
        "INFO",
        "LOW",
        "MEDIUM",
        "HIGH",
        "CRITICAL"
      ]
    },
    "priority": {
      "type": "string",
      "enum": [
        "P0",
        "P1",
        "P2",
        "P3"
      ]
    },
    "source": {
      "type": "string",
      "enum": [
        "MANUAL",
        "TEMPLATE",
        "POLICY_REVIEW",
        "AUDIT",
        "INTEGRATION"
      ]
    },
    "dueAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "assigneeUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "metadataJson": {}
  },
  "required": [
    "title"
  ],
  "description": "Create a task (unified work-item type covering improvements and ad-hoc tasks). The type discriminator gates which UI surfaces this work item appears in."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskEvidenceLinkRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "url": {
      "type": "string",
      "maxLength": 2000,
      "format": "uri"
    },
    "note": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 2000
    }
  },
  "required": [
    "url"
  ],
  "description": "Attach a URL as evidence on a task. File uploads use the multipart /evidence/uploads endpoint with a taskId."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskLinkAddRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "entityType": {
      "type": "string",
      "enum": [
        "ASSET",
        "EVIDENCE",
        "FILE",
        "LOCATION",
        "PARCEL",
        "EQUIPMENT",
        "PLANTING"
      ]
    },
    "entityId": {
      "type": "string",
      "minLength": 1
    },
    "relation": {
      "type": "string",
      "enum": [
        "RELATES_TO",
        "EVIDENCE_FOR",
        "BLOCKED_BY",
        "CAUSED_BY",
        "MITIGATED_BY"
      ]
    }
  },
  "required": [
    "entityType",
    "entityId"
  ],
  "description": "Link a task to another domain entity. The relation field captures semantic intent for downstream traceability views."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskSetStatusRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "status": {
      "type": "string",
      "enum": [
        "OPEN",
        "TRIAGED",
        "IN_PROGRESS",
        "BLOCKED",
        "RESOLVED",
        "CLOSED",
        "CANCELED"
      ]
    },
    "resolution": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 5000
    }
  },
  "required": [
    "status"
  ],
  "description": "Lifecycle transition for a task. resolution is required (by convention) when moving to RESOLVED/CLOSED to provide context for the audit trail."
}"
`;

exports[`API contract — per-schema snapshots schema: TaskUpdateRequest 1`] = `
"{
  "type": "object",
  "properties": {
    "title": {
      "type": "string",
      "minLength": 1,
      "maxLength": 500
    },
    "description": {
      "type": [
        "string",
        "null"
      ],
      "maxLength": 10000
    },
    "type": {
      "type": "string",
      "enum": [
        "TASK",
        "IMPROVEMENT"
      ]
    },
    "severity": {
      "type": "string",
      "enum": [
        "INFO",
        "LOW",
        "MEDIUM",
        "HIGH",
        "CRITICAL"
      ]
    },
    "priority": {
      "type": "string",
      "enum": [
        "P0",
        "P1",
        "P2",
        "P3"
      ]
    },
    "dueAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "reviewerUserId": {
      "type": [
        "string",
        "null"
      ]
    },
    "metadataJson": {}
  },
  "description": "Partial update for a task. Status changes and assignment go through their own focused endpoints."
}"
`;

exports[`API contract — per-schema snapshots schema: UserRef 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string",
      "example": "usr_01HG7…"
    },
    "name": {
      "type": [
        "string",
        "null"
      ],
      "example": "Alice Admin"
    },
    "email": {
      "type": [
        "string",
        "null"
      ],
      "example": "admin@acme.com"
    }
  },
  "required": [
    "id",
    "name"
  ],
  "description": "User identity reference embedded inside other resources (id + display name + optional email)."
}"
`;

exports[`API contract — per-schema snapshots schema: UserRefShort 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string",
      "example": "usr_01HG7…"
    },
    "name": {
      "type": [
        "string",
        "null"
      ],
      "example": "Alice Admin"
    }
  },
  "required": [
    "id",
    "name"
  ],
  "description": "User identity reference without email — used in audit-log entries and other places where leaking the email would be inappropriate."
}"
`;

exports[`API contract — per-schema snapshots schema: YieldRecord 1`] = `
"{
  "type": "object",
  "properties": {
    "id": {
      "type": "string"
    },
    "plantingId": {
      "type": [
        "string",
        "null"
      ]
    },
    "locationId": {
      "type": [
        "string",
        "null"
      ]
    },
    "seasonId": {
      "type": [
        "string",
        "null"
      ]
    },
    "commodity": {
      "type": [
        "string",
        "null"
      ]
    },
    "harvestedAt": {
      "type": [
        "string",
        "null"
      ]
    },
    "grossTonnes": {
      "type": [
        "number",
        "null"
      ]
    },
    "moisturePct": {
      "type": [
        "number",
        "null"
      ]
    },
    "areaHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "tPerHa": {
      "type": [
        "number",
        "null"
      ]
    },
    "valuationNotes": {
      "type": [
        "string",
        "null"
      ]
    },
    "createdAt": {
      "type": "string"
    },
    "updatedAt": {
      "type": "string"
    },
    "planting": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "successionNumber": {
          "type": "number"
        }
      },
      "required": [
        "id",
        "successionNumber"
      ],
      "additionalProperties": {}
    },
    "location": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    },
    "season": {
      "type": [
        "object",
        "null"
      ],
      "properties": {
        "id": {
          "type": "string"
        },
        "name": {
          "type": "string"
        },
        "status": {
          "type": "string"
        }
      },
      "required": [
        "id",
        "name"
      ],
      "additionalProperties": {}
    }
  },
  "required": [
    "id",
    "grossTonnes",
    "moisturePct",
    "areaHa",
    "tPerHa"
  ],
  "additionalProperties": {},
  "description": "Actual harvest production total. tPerHa is computed (grossTonnes / areaHa) and not stored. valuationNotes is encrypted at rest and returned decrypted."
}"
`;
